# skekbot-rs

./: .dockerignore  .luaurc  Cargo.toml  Changes.md  Dockerfile  Dockerfile.actions  LICENSE.md  README.md  build.rs  global.d.luau
.github/workflows/: build.yaml  release.yaml
assets/: home.js
src/: config.rs  consts.rs  db.rs  event.rs  lib.rs  main.rs  skekbot.rs  util.rs
src/commands/: config.rs  dad.rs  fun.rs  info.rs  luau.rs  mod.rs  ping.rs  quote.rs  rock_paper_scissors.rs
src/commands/traitor_only/: ban.rs  mod.rs
src/features/: dad.rs  hidden.rs  mod.rs  quote.rs  web.rs
src/lua/: builder.rs  event_handler.rs  format.rs  mod.rs  signal.rs  types.rs
src/lua/modules/: db.rs  env.rs  events.rs  hidden.rs  log.rs  me.rs  mod.rs  rest.rs  types.rs  utils.rs
src/models/: server.rs
src/web/: mod.rs  state.rs
src/web/routes/: activity.rs  home.rs  message.rs  mod.rs
templates/: error.html  home.html
types/skekbot/: db.luau  env.luau  events.luau  hidden.luau  log.luau  me.luau  rest.luau  types.luau  utils.luau
