[package]
name = "skekbot-rs"
version = "0.1.3"
edition = "2024"

[dependencies]
console = "0.16.2"
dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
