[package]
name = "skekbot-rs"
version = "0.3.4"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/thatgurkangurk/skekbot-rs"
authors = ["gurkan", "Skekdog"]

[dependencies]
axum = "0.8.9"
console = "0.16.3"
dotenvy = "0.15.7"
nlprule = "0.6.4"
phf = { version = "0.13.1", features = ["macros"] }
poise = "0.6.2"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# --- Global Lint Rules ---
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Set broad groups to a lower priority (-1) so exceptions can override them
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Catch common panic-inducing methods
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"

# --- Lint Exceptions ---
# (These implicit priority 0 lints will now successfully override the -1 groups above)
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[build-dependencies]
nlprule-build = "0.6.4"
