[package]
name = "skekbot_rs"
version = "0.4.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/thatgurkangurk/skekbot-rs"
authors = ["gurkan", "Skekdog"]

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
askama = "0.15.6"
axum = "0.8.9"
axum-embed = "0.1.0"
chrono = "0.4.44"
config = { version = "0.15.22", default-features = false, features = ["toml"] }
console = "0.16.3"
displaydoc = "0.2.5"
image = "0.25.10"
imageproc = "0.26.1"
moka = { version = "0.12.15", features = ["future"] }
nlprule = "0.6.4"
phf = { version = "0.13.1", features = ["macros"] }
poise = "0.6.2"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rust-embed = "8.11.0"
sea-orm = { version = "^2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "entity-registry", "schema-sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# --- Global Lint Rules ---
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Set broad groups to a lower priority (-1) so exceptions can override them
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Catch common panic-inducing methods
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"

# --- Lint Exceptions ---
# (These implicit priority 0 lints will now successfully override the -1 groups above)
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[build-dependencies]
nlprule-build = "0.6.4"
